; ModuleID = '/home/carl/AnghaBench/esp-idf/components/mdns/extr_mdns_networking.c__mdns_pcb_deinit_api.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/mdns/extr_mdns_networking.c__mdns_pcb_deinit_api.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tcpip_api_call_data = type { i32 }
%struct.TYPE_2__ = type { i32, i32, i32 }

@ESP_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.tcpip_api_call_data*)* @_mdns_pcb_deinit_api to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @_mdns_pcb_deinit_api(%struct.tcpip_api_call_data* %0) #0 {
  %2 = alloca %struct.tcpip_api_call_data*, align 8
  %3 = alloca %struct.TYPE_2__*, align 8
  store %struct.tcpip_api_call_data* %0, %struct.tcpip_api_call_data** %2, align 8
  %4 = load %struct.tcpip_api_call_data*, %struct.tcpip_api_call_data** %2, align 8
  %5 = bitcast %struct.tcpip_api_call_data* %4 to %struct.TYPE_2__*
  store %struct.TYPE_2__* %5, %struct.TYPE_2__** %3, align 8
  %6 = load %struct.TYPE_2__*, %struct.TYPE_2__** %3, align 8
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 2
  %8 = load i32, i32* %7, align 4
  %9 = load %struct.TYPE_2__*, %struct.TYPE_2__** %3, align 8
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 1
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @_udp_pcb_deinit(i32 %8, i32 %11)
  %13 = load i32, i32* @ESP_OK, align 4
  %14 = load %struct.TYPE_2__*, %struct.TYPE_2__** %3, align 8
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  store i32 %13, i32* %15, align 4
  %16 = load i32, i32* @ESP_OK, align 4
  ret i32 %16
}

declare dso_local i32 @_udp_pcb_deinit(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
